<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Next Phone</string>
    <string name="start">Begin</string>
    <string name="change_definitions">Change\nDefinitions</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_question">Question</string>
    <string name="place_holder_long">This is a Long String with at least a line or two. The purpose of this string is to provide a significantly long string so that the developers can test to see areas where a lot of text will be placed. That cute girl just smiled at me. That\'s always nice.</string>
    <string name="place_holder_medium">This is a Medium String, just one run-on sentence long as it should be because I like runon sentences.</string>
    <string name="place_holder_short">This is a Short String</string>
    <string name="title_activity_result">Phone Results</string>
    <string name="restart">Restart?</string>
    <string name="title_activity_startup">My Next Phone</string>
    <string name="title_activity_change_definitions">Add Rule</string>
    <string name="if_string">If:</string>
    <string name="then_string">Then:</string>
    <string name="is_string">is</string>
    <string name="and_symbol">&amp;</string>
    <string name="add_rule">Add Rule</string>
    <string name="very_low">Very Low</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
    <string name="submit">Submit</string>
    <string name="percentage">(0.50)</string>
    <string name="title_activity_change_menu">Change Definitions</string>
    <string name="add_set">Add Set</string>
    <string name="add_value">Add Value</string>
    <string name="add_question">Add Question</string>
    <string name="delete_rule">Delete Rule</string>
    <string name="delete_set">Delete Set</string>
    <string name="delete_question">Delete Question</string>
    <string name="title_activity_add_set">Add a Set</string>
    <string name="which_group">Which Group:</string>
    <string name="name">Name:</string>
    <string name="size_of_mtx">Size of Matrix:</string>
    <string name="desc">Description</string>
    <string name="reas">Reasoning</string>

</resources>
