<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/answers_container_bg"
    android:padding="10sp">
    
    <TextView
        android:id="@+id/item_result_description_header"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="24sp" 
        android:textColor="@color/white"/>
    
    <TextView
        android:id="@+id/item_result_description_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_result_description_header"
        android:maxLines="4"
        android:textSize="18sp"
        android:text="@string/place_holder_long" 
        android:textColor="@color/white"/>
    
    <ImageView
        android:id="@+id/item_result_description_expander"
        android:layout_height="30sp"
        android:layout_width="30sp"
        android:layout_below="@id/item_result_description_body"
        android:layout_alignParentRight="true"
        android:src="@drawable/expander"
        android:contentDescription="@string/place_holder_short"
        android:scaleType="fitCenter"
        android:alpha="0.5"/>

</RelativeLayout>
