<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartupActivity"
    android:background="@color/dark_blue" >
    
    <ImageView 
        android:id="@+id/central_image"
        android:layout_margin="10sp"
        android:padding="5sp"
        android:background="@drawable/result_img_bg"
        android:src="@drawable/cell_phone_placeholder"
        android:layout_width="200sp"
        android:layout_centerInParent="true"
        android:layout_height="200sp"
        android:contentDescription="@string/place_holder_short"/>
    
    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_above="@id/central_image"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="42sp"
        android:text="@string/app_name" />
    
    <Button 
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/central_image"
        android:layout_alignParentLeft = "true"
        android:layout_centerHorizontal="true"
        android:padding="3sp"
        android:layout_margin="20sp"
        android:text="@string/start"
        android:onClick="begin"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:background="@drawable/button_shape"/>
    
    <Button 
        android:id="@+id/change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/central_image"
        android:layout_alignParentRight = "true"
        android:layout_centerHorizontal="true"
        android:padding="3sp"
        android:layout_margin="20sp"
        android:text="@string/change_definitions"
        android:onClick="changeDefinitions"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/button_shape"/>

</RelativeLayout>
