<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ChangeDefinitionsActivity" 
    android:background="@color/dark_blue">

    <TextView
        android:id="@+id/if_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="42sp"
        android:text="@string/if_string"
        />
    
    <LinearLayout 
        android:id="@+id/if_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>
    
    <TextView
        android:id="@+id/then_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="42sp"
        android:text="@string/then_string"
        />

    <LinearLayout 
        android:id="@+id/then_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>
    
    <Button 
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3sp"
        android:layout_margin="20sp"
        android:text="@string/add_rule"
        android:onClick="addRule"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:background="@drawable/button_shape"/>
    
</LinearLayout>
