<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:id="@+id/item_answer_slider_text_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/result_img_bg"
        android:padding="5sp">
        
    
	    <SeekBar 
	        android:id="@+id/item_answer_slider_slider"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_centerHorizontal="true"
	        android:max="100"
	        android:progress="50"
	        />
	    
	    <TextView
	        android:id="@+id/item_answer_slider_text"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_below="@id/item_answer_slider_slider"
	        android:layout_alignParentLeft="true" 
	        android:padding="5sp"
	        android:text="@string/medium"
	        android:textColor="@color/yellow"
	        android:textSize="24sp"/>
	    
	    <TextView
	        android:id="@+id/item_answer_slider_percentage"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_below="@id/item_answer_slider_slider"
	        android:layout_alignParentRight="true" 
	        android:padding="5sp"
	        android:text="@string/percentage"
	        android:textColor="@color/yellow"
	        android:textSize="24sp"/>
    
    </RelativeLayout>
    
    <Button
        android:id="@+id/item_answer_slider_submit"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/item_answer_slider_text_container" 
        android:text="@string/submit"
        android:textColor="@color/white"
        android:padding="5sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"/>
    
    

</RelativeLayout>
