<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@color/dark_blue" >

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".AddRuleActivity" >
	
	    <TextView
	        android:id="@+id/if_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:textStyle="bold"
	        android:textSize="42sp"
	        android:text="@string/if_string"
	        />
	    
	    <LinearLayout 
	        android:id="@+id/if_body"
	        android:layout_below="@id/if_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@drawable/question_bg"/>
	    
	    <TextView
	        android:id="@+id/then_text"
	        android:layout_below="@id/if_body"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:textStyle="bold"
	        android:textSize="42sp"
	        android:text="@string/then_string"
	        
	        />
	
	    <LinearLayout 
	        android:id="@+id/then_body"
	        android:layout_below="@id/then_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@drawable/question_bg"/>
	    
	    <Button 
	        android:id="@+id/start_button"
	        android:layout_below="@id/then_body"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="3sp"
	        android:layout_margin="20sp"
	        android:text="@string/add_rule"
	        android:onClick="addRule"
	        android:textColor="@color/white"
	        android:textSize="26sp"
	        android:background="@drawable/button_shape"/>
	    
	</RelativeLayout>

</ScrollView>